syntax = "proto3";

package dataprocessing;
option go_package="github.com/neelchoudhary/budgetwallet-api-server/services/dataprocessing";

message AccountDailySnapshot {
    int64 item_id = 1;
    int64 account_id = 2;
    string date = 3;
    double balance = 4;
    double cash_out = 5;
    double cash_in = 6;
}

message GetAccountDailySnapshotsRequest {
    int64 user_id = 1;
    int64 item_id = 2;
    int64 account_id = 3;
}

message GetAccountDailySnapshotsResponse {
    repeated AccountDailySnapshot account_daily_snapshots = 1;
}

message Empty {}

service DataProcessingService {
    rpc GetAccountDailySnapshots(GetAccountDailySnapshotsRequest) returns (GetAccountDailySnapshotsResponse) {};
}